--- a/presentations/index.html
+++ b/presentations/index.html
@@ -13,7 +13,7 @@
         body {
             font-family: sans-serif;
             background: #000;
-            color: #fff;
+            color: #ffffff;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -34,6 +34,7 @@
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
             position: relative;
+            background: #626268;      
         }
 
         .splide__slide img {
