--- a/presentations/index.html
+++ b/presentations/index.html
@@ -111,6 +111,12 @@
                 <li class="splide__slide"><img
                         src="https://raw.githubusercontent.com/PaulosKapa/kana_fotilo/refs/heads/main/assets/cane.png"
                         alt="Image 3"></li>
+                <li class="splide__slide"><img
+                        src="https://raw.githubusercontent.com/PaulosKapa/kana_fotilo/refs/heads/main/assets/3drender.webp"
+                        alt="Image 4"></li>
+                <li class="splide__slide"><img
+                        src="https://raw.githubusercontent.com/PaulosKapa/kana_fotilo/refs/heads/main/assets/working.jpg"
+                        alt="Image 5"></li>
             </ul>
         </div>
     </section>
